Add benchmarks, optimize jni and ffm wrapper